# telegram-bot-starter

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  config.py
bot/handlers/: __init__.py  common.py  echo.py  start.py
bot/keyboards/: inline.py
bot/middlewares/: logging.py
bot/utils/: logging.py
