[project]
name = "telegram-bot-starter"
version = "1.0.0"
description = "A clean, production-ready Telegram bot boilerplate built with aiogram 3."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiogram>=3.13,<4.0",
    "pydantic-settings>=2.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
